--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,4 @@ addons:
     token:
       secure: 7c7e275bd874a87d281aa6d5cfde8c77c897340a # encrypted value of your token
 script:
-  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
-mvn sonar:sonar \
-  -Dsonar.projectKey=alonsodiego_MavenProject-test \
-  -Dsonar.organization=alonsodiego-github \
-  -Dsonar.host.url=https://sonarcloud.io \
-  -Dsonar.login=7c7e275bd874a87d281aa6d5cfde8c77c897340a
+  - sonar-scanner
