--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,5 @@ addons:
       
 script: 
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-  - mvn sonar:sonar \
-    -Dsonar.projectKey=alonsodiego_MavenProject-test \
-    -Dsonar.organization=alonsodiego-github \
-    -Dsonar.host.url=https://sonarcloud.io \
-    -Dsonar.login=7c7e275bd874a87d281aa6d5cfde8c77c897340a
+  - sonar-scanner
+
