--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ addons:
       secure: 7c7e275bd874a87d281aa6d5cfde8c77c897340a # encrypted value of your token
       
 script: 
-  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - mvn install -Dmaven.javadoc.skip=true -B -V
   - sonar-scanner
 
