--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,19 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>MAvenProjectTest</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.7</version>
+        <configuration>
+            <formats>
+                <format>html</format>
+                <format>xml</format>
+            </formats>
+            <check />
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
