--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
       secure: 7c7e275bd874a87d281aa6d5cfde8c77c897340a # encrypted value of your token
       
 script: 
-  - mvn install -Dmaven.javadoc.skip=true -B -V
+  - mvn package -Dmaven.javadoc.skip=true -B -V
   - sonar-scanner
 
 after_success:
