--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,22 @@
 version: 2
 jobs:
   build:
-    
-    working_directory: ~/circleci-demo-java-spring
-
+    working_directory: ~/circleci-feature9
     docker:
-      - image: circleci/openjdk:8-jdk-browsers
-      - image: circleci/postgres:9.6.3-alpine
-        environment:
-          POSTGRES_USER: root
-          POSTGRES_DB: circle_test
+      - image: maven:3.5.0-jdk-8
 
     steps:
-
       - checkout
-      
-      - run: mvn package
-      
+
+      - restore_cache:
+          key: circleci-feature9-{{ checksum "pom.xml" }}
+
+      - run: mvn test
+
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: circleci-feature9-{{ checksum "pom.xml" }}
+
       - store_test_results:
           path: target/surefire-reports
-      
