--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 		</dependency>
   </dependencies>
   <build>
+  <sourceDirectory>src/main/java</sourceDirectory>
     <plugins>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
